# PluginsWorkspace

./: .gitignore  Cargo.toml  DEPENDENTS.md  README.md  eslint.config.js  package.json  pnpm-workspace.yaml  renovate.json  tsconfig.base.json
examples/api/src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
examples/api/src-tauri/Source/: cmd.rs  lib.rs  main.rs  tray.rs
plugins/autostart/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/autostart/Documentation/: index.html  modules.html
plugins/autostart/Documentation/assets/: highlight.css
plugins/autostart/Source/: lib.rs
plugins/autostart/guest-js/: index.ts
plugins/autostart/permissions/autogenerated/: reference.md
plugins/barcode-scanner/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  api-iife.js  build.rs  package.json
plugins/barcode-scanner/Documentation/: index.html  modules.html
plugins/barcode-scanner/Source/: lib.rs
plugins/barcode-scanner/guest-js/: index.ts
plugins/barcode-scanner/permissions/: default.toml
plugins/barcode-scanner/permissions/autogenerated/: reference.md
plugins/biometric/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/biometric/Documentation/: index.html  modules.html
plugins/biometric/Source/: lib.rs  models.rs
plugins/biometric/guest-js/: index.ts
plugins/biometric/permissions/autogenerated/: reference.md
plugins/cli/: Cargo.toml  README.md  package.json
plugins/cli/Documentation/: index.html  modules.html
plugins/cli/Source/: parser.rs
plugins/cli/Source/parser/: macros.rs
plugins/clipboard-manager/: Cargo.toml  README.md  package.json
plugins/clipboard-manager/Documentation/: index.html  modules.html
plugins/clipboard-manager/Source/: commands.rs  mobile.rs
plugins/deep-link/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/deep-link/Documentation/: index.html  modules.html
plugins/deep-link/Documentation/assets/: highlight.css
plugins/deep-link/Source/: commands.rs  config.rs  error.rs  lib.rs
plugins/deep-link/examples/app/: .gitignore  CHANGELOG.md  package.json  tsconfig.json  vite.config.ts
plugins/deep-link/guest-js/: index.ts
plugins/deep-link/permissions/autogenerated/: reference.md
plugins/fs/: Cargo.toml  README.md  build.rs  package.json
plugins/fs/Documentation/: index.html  modules.html
plugins/fs/Source/: desktop.rs  file_path.rs  mobile.rs
plugins/fs/guest-js/: index.ts
plugins/geolocation/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/geolocation/Documentation/: index.html  modules.html
plugins/geolocation/Source/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/geolocation/guest-js/: bindings.ts  index.ts
plugins/geolocation/permissions/autogenerated/: reference.md
plugins/global-shortcut/: Cargo.toml  README.md  package.json
plugins/global-shortcut/Documentation/: index.html  modules.html
plugins/localhost/: CHANGELOG.md  Cargo.toml  README.md
plugins/localhost/Source/: lib.rs
plugins/log/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  api-iife.js  build.rs  package.json
plugins/log/Documentation/: index.html  modules.html
plugins/log/Source/: lib.rs
plugins/log/guest-js/: index.ts
plugins/opener/: Cargo.toml  build.rs  package.json
plugins/opener/Source/: commands.rs  error.rs  lib.rs  open.rs  reveal_item_in_dir.rs  scope.rs  scope_entry.rs
plugins/opener/guest-js/: index.ts  init.ts
plugins/persisted-scope/: CHANGELOG.md  Cargo.toml  README.md
plugins/persisted-scope/Source/: lib.rs
plugins/positioner/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/positioner/Documentation/: index.html  modules.html
plugins/positioner/Source/: ext.rs  lib.rs
plugins/positioner/guest-js/: index.ts
plugins/single-instance/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
plugins/single-instance/Source/: lib.rs  semver_compat.rs
plugins/sql/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/sql/Documentation/: index.html  modules.html
plugins/sql/Source/: commands.rs  error.rs  lib.rs  plugin.rs  wrapper.rs
plugins/sql/Source/decode/: mysql.rs  postgres.rs  (+1 more)
plugins/sql/guest-js/: index.ts
plugins/store/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/store/Documentation/: index.html  modules.html
plugins/store/Source/: desktop.rs  error.rs  lib.rs  mobile.rs  store.rs
plugins/store/guest-js/: index.ts
plugins/store/permissions/: default.toml
plugins/stronghold/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/stronghold/Documentation/: index.html  modules.html
plugins/stronghold/Source/: kdf.rs  lib.rs  stronghold.rs
plugins/stronghold/guest-js/: index.ts
plugins/stronghold/permissions/: default.toml
plugins/updater/: Cargo.toml  README.md  build.rs  package.json
plugins/updater/Documentation/: index.html  modules.html
plugins/updater/Source/: commands.rs  config.rs  updater.rs
plugins/updater/guest-js/: index.ts
plugins/upload/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/upload/Documentation/: index.html  modules.html
plugins/upload/Source/: lib.rs  transfer_stats.rs
plugins/upload/guest-js/: index.ts
plugins/websocket/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/websocket/Documentation/: index.html  modules.html
plugins/websocket/Source/: lib.rs
plugins/websocket/guest-js/: index.ts
plugins/window-state/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/window-state/Documentation/: index.html  modules.html
plugins/window-state/Source/: cmd.rs  lib.rs
plugins/window-state/guest-js/: index.ts
plugins/window-state/permissions/: default.toml
shared/template/: Cargo.toml  README.md  build.rs  package.json
shared/template/Documentation/: index.html  modules.html
shared/template/Source/: commands.rs  models.rs
(+154 files in other folders)
