[workspace]
members = [
	"plugins/*",
	"plugins/*/tests/*",
	"plugins/updater/tests/updater-migration/v2-app",
	"plugins/*/examples/*/src-tauri",
	"examples/*/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1" }
log = { version = "0.4" }
tauri = { version = "2", default-features = false }
tauri-build = "2"
tauri-plugin = "2"
tauri-utils = "2"
serde_json = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
schemars = { version = "0.8" }
dunce = { version = "1" }
specta = "=2.0.0-rc.20"
glob = { version = "0.3" }
zbus = { version = "4" }
#tauri-specta = "=2.0.0-rc.11"

[workspace.package]
edition = "2021"
authors = ["Tauri Programme within The Commons Conservancy"]
license-file = "LICENSE"
rust-version = "1.77.2"
repository = "https://github.com/tauri-apps/plugins-workspace"

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
