[profile]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
panic = "abort"

[workspace]
members = [
	"plugins/*",
	"plugins/*/tests/*",
	"plugins/updater/tests/updater-migration/v2-app",
	"plugins/*/examples/*/src-tauri",
	"examples/*/src-tauri",
]
resolver = "2"

[workspace.dependencies]
dunce = "1"
glob = "0.3"
log = { version = "0.4" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "^2.0.0-rc.16"
tauri = { version = "2", default-features = false }
tauri-build = "2"
tauri-plugin = "2"
tauri-utils = "2"
thiserror = "2"
tracing = { version = "0.1" }
url = "2"
zbus = "5"

[workspace.package]
authors = ["Tauri Programme within The Commons Conservancy"]
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/tauri-apps/plugins-workspace"
rust-version = "1.85.0"
