[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
clap = { version = "4", features = ["string"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Parse arguments from your Tauri application's command line interface."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-cli"
name = "tauri-plugin-cli"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
