[build-dependencies]
schemars = { workspace = true }
serde = { workspace = true }
tauri-plugin = { workspace = true, features = ["build"] }
tauri-utils = { workspace = true, features = ["build"] }
toml = "0.8"

[dependencies]
anyhow = "1"
dunce = { workspace = true }
glob = { workspace = true }
notify = { version = "8", optional = true, features = [
  "serde",
  "serialization-compat-6",
] }
notify-debouncer-full = { version = "0.5", optional = true }
percent-encoding = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
tauri = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[features]
watch = ["notify", "notify-debouncer-full"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Access the file system."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-fs"
name = "tauri-plugin-fs"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "partial", notes = "Access is restricted to Application folder by default" }
ios = { level = "partial", notes = "Access is restricted to Application folder by default" }
linux = { level = "full", notes = "No write access to `$RESOURCES` folder" }
macos = { level = "full", notes = "No write access to `$RESOURCES` folder" }
windows = { level = "full", notes = "Apps installed via MSI or NSIS in `perMachine` and `both` mode require admin permissions for write acces in `$RESOURCES` folder" }
