[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, optional = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[features]
specta = ["dep:specta", "tauri/specta"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Get and track the device's current position"
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-geolocation"
name = "tauri-plugin-geolocation"
repository = { workspace = true }
version = "2.2.3"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-linux-android"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
linux = { level = "none", notes = "" }
macos = { level = "none", notes = "" }
windows = { level = "none", notes = "" }

[target]

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { workspace = true, features = ["wry"] }
