[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Register global hotkeys listeners on your Tauri application."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-global-shortcut"
name = "tauri-plugin-global-shortcut"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))']

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
global-hotkey = { version = "0.6", features = ["serde"] }
