[dependencies]
http = "1"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tiny_http = "0.12"

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Expose your apps assets through a localhost server instead of the default custom protocol."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-localhost"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
