[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
byte-unit = "5"
fern = "0.7"
log = { workspace = true, features = ["kv_unstable"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
tauri = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }

[features]
colored = ["fern/colored"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Configurable logging for your Tauri app."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-log"
name = "tauri-plugin-log"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(target_os = "android")']

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", default-features = false, features = [
  "std",
  "NSString",
] }
swift-rs = "1"
