[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
tauri = { workspace = true }
thiserror = { workspace = true }

[features]
tray-icon = ["tauri/tray-icon"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Position your windows at well-known locations."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-positioner"
name = "tauri-plugin-positioner"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
