[dependencies]
semver = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-deep-link = { path = "../deep-link", version = "2.2.0", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
deep-link = ["dep:tauri-plugin-deep-link"]
semver = ["dep:semver"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Ensure a single instance of your tauri app is running."
edition = { workspace = true }
exclude = ["/examples"]
license-file = { workspace = true }
name = "tauri-plugin-single-instance"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = [
	"Win32_System_Threading",
	"Win32_System_DataExchange",
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Security",
	"Win32_System_LibraryLoader",
	"Win32_Graphics_Gdi",
]
version = "0.59"
