[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
futures-core = "0.3"
indexmap = { version = "2", features = ["serde"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["json", "time"] }
tauri = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
tokio = { version = "1", features = ["sync"] }

[features]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Interface with SQL databases."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-sql"
name = "tauri-plugin-sql"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
features = ["sqlite"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
# TODO: bundled-cipher etc
