[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
hex = "0.4"
iota-crypto = "0.23"
iota_stronghold = "2"
log = { workspace = true }
rand_chacha = { version = "0.3.1", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
rust-argon2 = { version = "2", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"

[features]
default = ["kdf"]
kdf = ["dep:rust-argon2", "dep:rand_chacha", "dep:rand_core"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Store secrets and keys using the IOTA Stronghold secret management engine."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-stronghold"
name = "tauri-plugin-stronghold"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
