[package]
name = "tauri-plugin-updater"
version = "2.5.0"
description = "In-app updates for Tauri applications."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
links = "tauri-plugin-updater"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
no-default-features = true
features = ["zip"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
http = "1"
infer = "0.16"
minisign-verify = "0.2"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
semver = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = "1"
url = { workspace = true }

[features]
default = ["rustls-tls", "zip"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
zip = ["dep:zip", "dep:tar", "dep:flate2"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "In-app updates for Tauri applications."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-updater"
name = "tauri-plugin-updater"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.5.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
features = ["zip"]
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }

[target]

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "6"
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1"
osakit = { version = "0.3", features = ["full"] }
tar = "0.4"

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[target."cfg(target_os = \"linux\")".dependencies]
dirs = "6"
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
tar = "0.4"
flate2 = "1"
osakit = { version = "0.3", features = ["full"] }

[features]
default = ["rustls-tls", "zip"]
zip = ["dep:zip", "dep:tar", "dep:flate2"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
