[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
futures-util = "0.3"
log = { workspace = true }
read-progress-stream = "1.0.0"
reqwest = { version = "0.12", default-features = false, features = [
  "macos-system-configuration",
  "json",
  "stream",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1", features = ["macros"] }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

[lib]
path = "Source/lib.rs"

[package]
name = "tauri-plugin-upload"
version = "2.2.1"
description = "Upload files from disk to a remote server over HTTP."
authors = { workspace = true }
description = "Upload files from disk to a remote server over HTTP."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-upload"
name = "tauri-plugin-upload"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", default-features = false, features = [
  "macos-system-configuration",
  "json",
  "stream",
] }
futures-util = "0.3"
read-progress-stream = "1.0.0"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1", features = ["macros"] }
