[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
bitflags = "2"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Save window positions and sizes and restore them when the app is reopened."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-window-state"
name = "tauri-plugin-window-state"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
