[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-PLUGIN_NAME"
name = "tauri-plugin-PLUGIN_NAME"
repository = { workspace = true }
version = "1.0.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]
android = { level = "unknown", notes = "" }
ios = { level = "unknown", notes = "" }
linux = { level = "unknown", notes = "" }
macos = { level = "unknown", notes = "" }
windows = { level = "unknown", notes = "" }
